docs fix, scrollbar css, purple color change

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,15 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
 }
+
+::-webkit-scrollbar {
+  width: 8px; /* szerokość paska przewijania */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2); /* kolor samego paska */
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.1); /* kolor tła paska */
+}
